--- a/front/package.json
+++ b/front/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^2.1.3",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
